--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,3 +1,12 @@
+/* 
+    João Paulo Oliveira
+    JpOliveira
+    Ciência da Computação
+    Web Developer
+    Desenvolvedor Web
+    Front End
+    UFPA
+*/
 /*! === FONTS === */
 @import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Poppins:wght@300;400;700&display=swap");
 
